<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        tools:context=".SignUpActivity">

    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtusername"
            android:hint="@string/tvusername"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtemail"
            android:hint="@string/txtHintEmail"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtusername"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtconfirmpass"
            android:hint="@string/tvconfirm_password"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtpass"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtpass"
            android:hint="@string/txtHintPassword"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtemail" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:text="@string/tvsign_up"
            android:layout_width="290dp"
            android:layout_height="47dp"
            android:id="@+id/btn_photoform"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshapecollor"
            android:onClick="goToMainScreenActvity"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="61dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="61dp" android:layout_marginTop="144dp"
            app:layout_constraintTop_toBottomOf="@+id/txtconfirmpass" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/btnsign_up_with_google"
            android:textColor="#5555ff"
            android:background="@null"
            android:layout_width="246dp"
            android:layout_height="63dp"
            android:id="@+id/btncadastr"
            android:drawableLeft="@drawable/icons8google48"
            android:textSize="18sp"
            android:onClick="goToMainScreenActvity"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="83dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="82dp" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_photoform" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="20dp"
            android:text="@string/tvsign_up"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>


</android.support.constraint.ConstraintLayout>