<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        tools:context=".SignUpActivity">

    <Button
            android:text="@string/btn_photoform"
            android:layout_width="290dp"
            android:layout_height="47dp"
            android:id="@+id/btn_photoform"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/buttonshapecollor"
            android:onClick="goToMainScreenActvity"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="61dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="61dp"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="395dp"
            android:layout_height="122dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:id="@+id/textInputLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_photoform"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_emailform">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_form" android:id="@+id/txt_form"/>
    </android.support.design.widget.TextInputLayout>
    <ImageView
            android:layout_width="111dp"
            android:layout_height="123dp" app:srcCompat="@drawable/ic_account_circle_200dp"
            android:id="@+id/img_photoform" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/hint_emailform"
            android:id="@+id/txt_emailform" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txt_phoneform"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/hint_phoneform"
            android:id="@+id/txt_phoneform" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_photoform" app:layout_constraintHorizontal_bias="0.0"/>


</android.support.constraint.ConstraintLayout>