<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/img_uploaded"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:onClick="choseImage"
            app:srcCompat="@drawable/ic_upload"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/btn_uploadimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:onClick="uploadImage"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_return" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/img_uploaded" app:layout_constraintVertical_bias="0.821"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_return"
            android:text="@string/btn_return"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/btn_uploadimage" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/img_uploaded"
            android:onClick="backScreen" app:layout_constraintVertical_bias="0.821"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textMultiLine"
            android:ems="10"
            android:id="@+id/textComment" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/img_uploaded" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_uploadimage" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.307" android:hint="@string/comment"/>


</android.support.constraint.ConstraintLayout>