<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_height="251dp" app:srcCompat="@drawable/ic_account_circle_200dp"
            android:id="@+id/img_demandNode" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"/>
    <TextView
            android:text="instant@gmail.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_EntryEmail" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="92dp"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/img_demandNode"
    />
    <TextView
            android:text="@string/tv_NClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_NClient" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/img_demandNode" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_NCphone" app:layout_constraintEnd_toStartOf="@+id/tv_EntryEmail"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/tv_NCphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_NCphone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/tv_EntryNumber"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.17" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_NClient" android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_NComent"/>
    <TextView
            android:text="8888888888"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_EntryNumber" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="132dp"
            android:layout_marginBottom="88dp" app:layout_constraintBottom_toTopOf="@+id/tv_comentDemand"
            android:layout_marginTop="29dp" app:layout_constraintTop_toBottomOf="@+id/tv_EntryEmail"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/tv_NComent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_NComent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.074" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_NCphone"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:id="@+id/tv_comentDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:gravity="center"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_NComent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btn_returnDemand"/>
    <Button
            android:text="@string/btn_return"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshapecollor"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:id="@+id/btn_returnDemand" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:onClick="DemandDetailBacktoMain"/>
</android.support.constraint.ConstraintLayout>